2008-01-07  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hg.el (vc-hg-dir-state, vc-hg-dir-status): Pass the dir
	argument to vc-hg-command.

2008-01-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-ensure-vc-buffer): Check liveness of vc-parent-buffer.

2008-01-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-status-fileinfo): New defstruct.
	(vc-status): New defvar
	(vc-status-insert-headers, vc-status-printer, vc-status)
	(vc-status-mode-map, vc-status-mode, vc-status-mark-file)
	(vc-status-unmark-file, vc-status-marked-files): New functions.

	* vc-hg.el (vc-hg-dir-status): New function.

2008-01-06  Martin Rudalics  <rudalics@gmx.at>

	* cus-edit.el (custom-tool-bar-map): Move initialization of this
	keymap from here ...
	(custom-mode): ... to here.  Reported by Reiner Steib.

2008-01-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* obsolete/x-apollo.el: Remove file for unsupported system.

	* term/x-win.el (vendor-specific-keysyms): Remove reference to
	Apollo.

	* progmodes/gud.el (gud-dgux-p): Remove.
	(dbx): Remove reference to dgux.

	* progmodes/ps-mode.el (ps-mode-print-function):
	* ps-print.el (ps-lp-system):
	* paths.el (rmail-spool-directory):
	* ls-lisp.el (ls-lisp-emulation):
	* lpr.el (lpr-lp-system):
	* dired.el (dired-chown-program): Remove references to dgux.

2008-01-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-process-sentinel): Fix apparent typo.
	(vc-do-command): Forcefully kill any left over process.
	Use start-file-process.
	(vc-annotate-get-time-set-line-props): Check we don't move backward.

2008-01-04  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-list-hash-table)
	(dbus-name-owner-changed-handler): Replace "signal" by "member".
	(dbus-check-event): Add serial number to event.
	(dbus-handle-event): Apply return message if needed.
	(dbus-event-serial-number): New defun.
	(dbus-event-service-name, dbus-event-path-name)
	(dbus-event-interface-name, dbus-event-member-name):